vlib/v/checker/tests/map_repeated_float_key_err.out
vlib/v/checker/tests/map_repeated_float_key_err.vv:5:3: error: duplicate key "1.e-06" in map literal
    3 |         0.000001: 'small-1'
    4 |         0.00001:  'small-2'
    5 |         1.e-06:   'small-3'
      |         ~~~~~~
    6 |         0.00001:  'small-4'
    7 |     }
vlib/v/checker/tests/map_repeated_float_key_err.vv:6:3: error: duplicate key "0.00001" in map literal
    4 |         0.00001:  'small-2'
    5 |         1.e-06:   'small-3'
    6 |         0.00001:  'small-4'
      |         ~~~~~~~
    7 |     }
    8 |     dump(m64)
