vlib/v/checker/tests/map_repeated_float_key_err.vv
fn main() {
	m64 := {
		0.000001: 'small-1'
		0.00001:  'small-2'
		1.e-06:   'small-3'
		0.00001:  'small-4'
	}
	dump(m64)
}
